fresh_build_log_v6.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
/home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/activities/AdminSetupWizardActivity.java:98: error: cannot find symbol
                fragment = new WizardPayoutFragment();
                               ^
  symbol:   class WizardPayoutFragment
  location: class AdminSetupWizardActivity
/home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/activities/AdminSetupWizardActivity.java:148: error: cannot find symbol
        } else if (currentFragment instanceof WizardPayoutFragment) {
                                              ^
  symbol:   class WizardPayoutFragment
  location: class AdminSetupWizardActivity
/home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/activities/AdminSetupWizardActivity.java:149: error: cannot find symbol
            return ((WizardPayoutFragment) currentFragment).validateAndSave();
                     ^
  symbol:   class WizardPayoutFragment
  location: class AdminSetupWizardActivity
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///home/darlin-pafra/AndroidStudioProjects/Save/Front-end/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  /home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/activities/AdminSetupWizardActivity.java:98: error: cannot find symbol
                  fragment = new WizardPayoutFragment();
                                 ^
    symbol:   class WizardPayoutFragment
    location: class AdminSetupWizardActivity
  /home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/activities/AdminSetupWizardActivity.java:148: error: cannot find symbol
          } else if (currentFragment instanceof WizardPayoutFragment) {
                                                ^
    symbol:   class WizardPayoutFragment
    location: class AdminSetupWizardActivity
  /home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/activities/AdminSetupWizardActivity.java:149: error: cannot find symbol
              return ((WizardPayoutFragment) currentFragment).validateAndSave();
                       ^
    symbol:   class WizardPayoutFragment
    location: class AdminSetupWizardActivity
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 3s
19 actionable tasks: 1 executed, 18 up-to-date
